--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@opentelemetry/instrumentation": "^0.204.0",
     "@opentelemetry/sdk-logs": "^0.204.0",
     "@vercel/otel": "^1.13.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "next": "15.5.1-canary.35",
     "react": "19.1.0",
     "react-dom": "19.1.0"
